# quickmirror

./: .gitignore  ICON_CREATION.md  README.md  RELEASE.md  WARP.md  icon-generator.html  package-lock.json  package.json  quickmirror_brief.md  vite.config.ts
.github/workflows/: build-windows.yml
electron/: main.cjs  preload.cjs
scripts/: create-icons.cjs
src/: audio.ts  camera.ts  index.html  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
