[package]
name = "quickmirror"
version = "1.0.0"
description = "Windows system tray utility for quick camera/microphone validation"
authors = ["Spencer Campbell <spencer@spencerc.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quickmirror_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros"] }

[dependencies.windows]
version = "0.54"
features = [
  "Win32_Media_MediaFoundation",
  "Win32_System_Com"
]

